--- a/2_Assessment.Rmd
+++ b/2_Assessment.Rmd
@@ -129,7 +129,7 @@ The above is also the median of the prior. The prior is defined as a lognormal w
 
 Examining all biological data sources, the sex ratio of young fish are within 5% of 1:1 by either length or age (Figures \ref{fig:sexratio} and \ref{fig:sexratio_Age}), and hence this assessment the sex ratio at birth was assumed to be 1:1.  This assessment assumed a logistic maturity-at-length curve based on analysis of 537 fish maturity samples collected from the NWFSC shelf-slope survey.  This is revised from the previous assessment which assumed maturity-at-age based on the work of Hannah and Parker [@hannah_age-modulated_2007].  Additionally, the new maturity-at-length curve is based on the estimate of functional maturity an approach that classifies rockfish maturity with developing oocytes as mature or immature based on the proportion of vitellogenin in the cytoplasm and the measured frequency of atretic cells (M. Head, personal communication).  The 50% size-at-maturity was estimated at 32.1 cm with maturity asymptoting to one for larger fish (Figure \ref{fig:mat}).  Comparison between the maturity-at-age used in the previous assessment and the updated functional maturity-at-length is shown in Figure \ref{fig:mat_compare}.
 
-The fecundity-at-age has also been updated from the previous assessment based on new research.  Dick [-@dick_meta-analysis_2017] estimated new fecundity relationships for select West Coast stocks where fecundity for `r spp` was estimated equal to `r mod1$MGparmAdj$Eggs_scalar_Fem[1]`$L$^`r round(mod1$MGparmAdj$Eggs_exp_len_Fem[1],2)`^ in millions of eggs. Spawning output at length is shown in Figure \ref{fig:fecundity}.
+The fecundity-at-age has also been updated from the previous assessment based on new research.  Dick [-@dick_meta-analysis_2017] estimated new fecundity relationships for select West Coast stocks where fecundity for `r spp` was estimated equal to `r round(mod1$MGparmAdj$Eggs_scalar_Fem[1],12)`$L$^`r round(mod1$MGparmAdj$Eggs_exp_len_Fem[1],2)`^ in millions of eggs. Spawning output at length is shown in Figure \ref{fig:fecundity}.
 
 
 ###Length-weight relationship
@@ -225,7 +225,7 @@ The specifications of the assessment are listed in Table \ref{tab:Model_setup}. 
 
 The Triennial survey was kept as a single series. Assessment of other groundfish have split this survey into an early and a late series, based mostly on the shift to deeper depths and the timing of the survey, by estimating different catchability parameters and selectivity parameters for each period. Age data were available for the commercial and at-sea hake fishery, as well as the Triennial, the `r spp`, the NWFSC slope, and the NWFSC shelf-slope survies.  The ages from the NWFSC shelf-slope survey and were entered into the model as conditional age-at-length. Length-frequencies were calculated for the Triennial, `r spp`, AFSC slope, NWFSC slope,  and the NWFSC shelf-slope surveys within each stratum, and then combined across strata using the biomass in each stratum as the weighting factor. This reduced the influence of a few fish observed in a large area.
 
-The specification of when to estimate recruitment deviations is an assumption that likely affects model uncertainty. It was decided to estimate recruitment deviations from 1900-2014 to appropriately quantify uncertainty. The earliest length-composition data occur in 1966 and the earliest age data were in 1981. The most informed years for estimating recruitment deviations were from about the mid-1970s to about 2011. The period from 1900-1974 was fit using an early series with little or no bias adjustment, the main period of recruitment deviates occurred from 1975-2014 with an upward and downward ramping of bias adjustment, and 2015 onward was fit using forecast recruitment deviates with little bias adjustment. Methot and Taylor [-@methot_bias_2011) summarize the reasoning behind varying levels of bias adjustment based on the information available to estimate the deviates. Recruitment deviation was assumed to be 0.70.
+The specification of when to estimate recruitment deviations is an assumption that likely affects model uncertainty. It was decided to estimate recruitment deviations from 1900-2014 to appropriately quantify uncertainty. The earliest length-composition data occur in 1966 and the earliest age data were in 1981. The most informed years for estimating recruitment deviations were from about the mid-1970s to about 2011. The period from 1900-1974 was fit using an early series with little or no bias adjustment, the main period of recruitment deviates occurred from 1975-2014 with an upward and downward ramping of bias adjustment, and 2015 onward was fit using forecast recruitment deviates with little bias adjustment. Methot and Taylor [-@methot_bias_2011) summarize the reasoning behind varying levels of bias adjustment based on the information available to estimate the deviates. Recruitment deviation was assumed to be `r round(mod1$parameters[mod1$parameters$Label == "SR_sigmaR","Value"],2)`.
 
 The recommended selectivity type in Stock Synthesis is the double normal and was used in this assessment for the all fleets, except the `r spp` survey which was assumed logistic based on the length composition data. Changes in retention curves were estimated for the commercial fishery.
 
@@ -241,7 +241,7 @@ The STAT team used Stock Synthesis version 3.30.03.03 by Dr. Richard Methot at t
 ###Priors
 A prior distribution was developed for the natural mortality parameter from an analysis of a maximum age of 100 years. The analysis was performed by Owen Hamel (pers comm, NWFSC, NOAA) and used data from Then et al. [-@then_evaluating_2015] to provide a lognormal distribution for natural mortality. The median of the lognormal prior is 0.054 and has a standard error of 0.4384343. 
 
-The prior for steepness ($h$) assumes a beta distribution with parameters based on an update of the Dorn rockfish prior (commonly used in past West Coast rockfish assessments) conducted by J. Thorson (pers. comm, NWFSC, NOAA) which was reviewed and endorsed by the SSC in 2017. The prior is a beta distribution with $\mu$=0.72 and $\sigma$=0.15. However, fixing steepness within the model resulted in unrealistic relative biomass levels ($>$ 1), it was also decided to fix steepness at 0.50.  The previous assessment estimated and fixed steepness equal to 0.40.  The current data does not contain information regarding steepness and 0.50 was selected as an intermediate value between the prior and the previous assessment value.  The steepness value of 0.50 was contained within the estimated uncertainty envelope from the assessment model when either the prior value of 0.72 or 0.40 values were assumed.
+The prior for steepness ($h$) assumes a beta distribution with parameters based on an update of the Dorn rockfish prior (commonly used in past West Coast rockfish assessments) conducted by J. Thorson (pers. comm, NWFSC, NOAA) which was reviewed and endorsed by the SSC in 2017. The prior is a beta distribution with $\mu$=0.72 and $\sigma$=0.15. However, fixing steepness within the model resulted in unrealistic relative biomass levels ($>$ 1), it was also decided to fix steepness at `r print(mod1$parameters[mod1$parameters$Label == "SR_BH_steep","Value"],2)`.  The previous assessment estimated and fixed steepness equal to 0.40.  The current data does not contain information regarding steepness and `r print(mod1$parameters[mod1$parameters$Label == "SR_BH_steep","Value"],2)` was selected as an intermediate value between the prior and the previous assessment value.  The steepness value of `r print(mod1$parameters[mod1$parameters$Label == "SR_BH_steep","Value"],2)` was contained within the estimated uncertainty envelope from the assessment model when either the prior value of 0.72 or 0.40 values were assumed.
 
 ###Data Weighting
 
@@ -252,18 +252,21 @@ The base case assessment model was weighted based on the "Francis method", which
 
 ###Estimated And Fixed Parameters
 
-There were 164 estimated parameters in the base case model. These included one parameter for $R0$, 8 parameters for growth, 2 parameters for extra variability on the Triennial and NWFSC shelf-slope surveys indices, 24 parameters for selectivity, retention, and time blocking of the fleets and the surveys, 117 recruitment deviations, and 12 forecast recruitment deviations (Table \ref{tab:Model1_params}).
+There were 164 estimated parameters in the base case model. These included one parameter for $R_0$, 8 parameters for growth, 2 parameters for extra variability on the Triennial and NWFSC shelf-slope surveys indices, 24 parameters for selectivity, retention, and time blocking of the fleets and the surveys, 117 recruitment deviations, and 12 forecast recruitment deviations (Table \ref{tab:model_params}).
 
-Fixed parameters in the model were as follows. Steepness was fixed at 0.50. A sensitivity analysis and a likelihood profile were done for steepness. Natural mortality was fixed at 0.054 for females and males, which is the median of the prior.  The standard deviation of recruitment deviates was fixed at 0.70. Maturity at age was fixed as described in Section \ref{sex-ratio-maturation-and-fecundit}. Length-weight parameters were fixed at estimates using all length-weight observations (Figure \ref{fig:Wt_len_pred}).
+Fixed parameters in the model were as follows. Steepness was fixed at `r print(mod1$parameters[mod1$parameters$Label == "SR_BH_steep","Value"],2)`. A sensitivity analysis and a likelihood profile were done for steepness. Natural mortality was fixed at `r round(mod1$parameters[mod1$parameters$Label == "NatM_p_1_Fem_GP_1","Value"],3)` for females and males, which is the median of the prior.  The standard deviation of recruitment deviates was fixed at `r print(mod1$parameters[mod1$parameters$Label == "SR_sigmaR","Value"],2)`. Maturity at age was fixed as described in Section \ref{sex-ratio-maturation-and-fecundity}. Length-weight parameters were fixed at estimates using all length-weight observations (Figure \ref{fig:Wt_len_pred}).
 
 Dome-shaped selectivity was explored for both the fishery and the surveys. Older `r spp` are often found in deeper waters and may move into areas that limit their availability to fishing gear, especially trawl gear. Domed shape selectivity was assumed for the fishery fleet and the Triennial survey. The final base model assumed asymptotic selectivity for the at-sea hake fishery, and all other surveys.
 
 ##Model Selection and Evaluation
-###Key Assumptions and Structural Choices
-Include: Evidence of search for balance between model realism and parsimony.  
-Comparison of key model assumptions, include comparisons based on nested models 
-(e.g., asymptotic vs. domed selectivities, constant vs. time-varying selectivities).  
 
+The base case assessment model for `r spp` was developed to balance parsimony and realism, and the goal was to estimate a biomass trajectory for the population of `r spp` on the west coast of the United States. The model contains many assumptions to achieve parsimony and uses many different sources of data to estimate reality. A series of investigative model runs were done to achieve the final base case model.
+
+###Key Assumptions and Structural Choices
+
+The key assumptions in the model were that the assessed population is a single stock with biological parameters characterizing the entire coast, maturity at age has remained constant over the period modeled, weight-at-length has remained constant over the period modeled, the standard deviation in recruitment deviation is `r print(mod1$parameters[mod1$parameters$Label == "SR_sigmaR","Value"],2)`,  and steepness is `r print(mod1$parameters[mod1$parameters$Label == "SR_BH_steep","Value"],2)`. These are simplifying assumptions that unfortunately cannot be verified or disproven. Sensitivity analyses were conducted for most of these assumptions to determine their effect on the results.
+
+Structurally, the model assumed that the catches from each fleet were representative of the coastwide population, instead of specific areas, and fishing mortality prior to 1918 was negligible. It also assumed that discards were low prior to 1992 and after 2010.
 
 
 ###Alternate Models Considered
